# systemd-efi-stub-standalone

./: .gitignore  Makefile  README.md  meson.build  meson_options.txt
src/: meson.build
