# -*- mode: meson -*-
# SPDX-License-Identifier: LGPL-2.1-or-later

# STANDALONE NOTE
# ===============
# This file has been derived from the official systemd meson_options.txt file (snapshot shortly after v249 release),
# but has been reduced to the parts that were considered necessary to build
# systemd's EFI stub as a standalone component without intrusive source code changes.
# - Alexander Schreiber (schreiberstein) - 2021-10-08

option('rootprefix', type : 'string',
       description : '''override the root prefix [default '/' if split-usr and '/usr' otherwise]''')
option('efi', type : 'boolean',
       description : 'enable systemd-boot and bootctl')
option('gnu-efi', type : 'combo', choices : ['auto', 'true', 'false'],
       description : 'gnu-efi support for sd-boot')
option('efi-cc', type : 'array',
       description : 'the compiler to use for EFI modules')
option('efi-ld', type : 'string', value : 'ld',
       description : 'the linker to use for EFI modules')
option('efi-libdir', type : 'string',
       description : 'path to the EFI lib directory')
option('efi-includedir', type : 'string', value : '/usr/include/efi',
       description : 'path to the EFI header directory')
option('tpm', type : 'boolean',
       description : 'TPM should be used to log events and extend the registers',
       value: true)
